--- a/projetospring/src/main/resources/application.properties
+++ b/projetospring/src/main/resources/application.properties
@@ -5,6 +5,8 @@ spring.datasource.password=root
 spring.jpa.hibernate.ddl-auto=update
 
 
-//logging.level.com.baeldung.testloglevel=DEBUG
+
+logging.level.com.baeldung.testloglevel=DEBUG
 spring.security.user.name= deborafsm
 spring.security.user.password= 123456
+server.error.whitelabel.enabled=false
